rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__compare_operator.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (compare_operator),\n\"\n    a !~ '1';\n    a =~ '1';\n    a >< '1';\n    a >!< '1';\n    a == '1';\n    a != '1';\n    a > '1';\n    a < '1';\n    a >= '1';\n    a <= '1';\n    \")"
---
[
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: BangTilde,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: EqualTilde,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: GreaterLess,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: GreaterBangLess,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: EqualEqual,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: BangEqual,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: Greater,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: Less,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: GreaterEqual,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: LessEqual,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    49,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
]
