rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__function_call_unclosed.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (function_call_unclosed), \"a(1, 2, 3\")"
---
error: Expected ')'
  ┌─ function_call_unclosed:1:10
  │
1 │ a(1, 2, 3
  │          ^ Expected ')'
