rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__increment_without_place_expr2.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_err :: < Expr >\n(stringify! (increment_without_place_expr2), \"(5 + 3)++\")"
---
error: Not a valid assignment target.
  ┌─ increment_without_place_expr2:1:1
  │
1 │ (5 + 3)++
  │ ^^^^^^^ Not a valid assignment target.
